       compatibility, so I did a lot of changes at once.
    Compatibility libraries are provided to help support rendering that relied
       on the earlier libriaries at:
       git://github.com/gshank/html-formhandler_pre-0.40_compat.git
       README at: https://github.com/gshank/html-formhandler_pre-0.40_compat/blob/master/README

    'auto_fieldset' and 'no_auto_fieldset' no longer used. No automatic fieldsets.
       Can be added with do_wrapper => 1 and a tag of wrapper_tag => 'fieldset'
    Localize the value of the reset button.
    Tests and fix for form 'validate_<field_name>' and 'default_<field_name>' method
        for repeatables fields.
    Change default radiogroup rendering to not use <br /> elements. Add back
        with tag  radio_br_after => 1
    Switch to using coderef for deflate_method; custom fields with deflate sub
        will need to be modified.
    Add block rendering (HTML::FormHandler::Blocks)
    Re-do code for default & validate method construction; now provides
       'default_method' and 'validate_method' coderef setting
    Remove 'init_value_*' from Field (deprecated for years).
    Use Hash::Merge in merging update field info on creation
    Fix bug in copying tags to fields by cloning field definitions
    Switch to using name 'element_attr' in fields instead of 'html_attr'
    Put wrapper class 'hfh-repinst' on Repeatable Instances unless they already have a wrapper class
    Remove 'javascript' field attribute. Put into *_attr hashref.
    Automatically put 'error' on element and wrapper.
    Switch to having the 'class' as a separate attribute from the _attr collection.
       Use 'element_class', 'wrapper_class' & 'label_class' arrayrefs
    Switch to having widget names by default be camel case; provide convenience
       methods for templates - uwidget, uwrapper, twidget, twrapper.
       ** this change will affect existing template systems, if they use the