@@ -51,7 +51,6 @@ namespace::autoclean       = 0.09
 Email::Valid               = 0
 Sub::Exporter              = 0
 HTML::TreeBuilder          = 3.23
-Hash::Merge                = 0
 Sub::Name                  = 0
 Data::Clone                = 0
 
